--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
 	<style>
 		.no-wave { position:absolute; z-index:10; width:100%; height:100%; }
-		.rain-area { width:100%; height:100%; background:linear-gradient(45deg, #EF61A8 0%, #01BCC2 100%); pointer-events:none; }
+		.rain-area { width:100%; height:100%; /*background:linear-gradient(45deg, #EF61A8 0%, #01BCC2 100%);*/ background:url('../resource/img/bg.jpg') center center/cover no-repeat; pointer-events:none; }
 	</style>
 </head>
 <body>
