--- a/html/glass3.html
+++ b/html/glass3.html
@@ -11,16 +11,16 @@
 
 	<style>
 		.aurora-wrap { position:relative; width:100%; height:100%; filter:blur(20px); }
-		.auroras { position:absolute; top:50px; left:100px; animation:aniAuroras ease-in-out 20s infinite; }
+		.auroras { position:absolute; top:50px; left:100px; animation:aniAuroras ease-in-out 60s infinite; }
 		.aurora { position:absolute; border-radius:50%; }
 		.aurora.n1 { top:10px; left:0; width:70px; height:100px; background:rgba(255, 48, 41, 0.25); animation:aniAurora1 ease-in-out 8s infinite; }
 		.aurora.n2 { top:50px; left:60px; width:100px; height:80px; background:rgba(41, 194, 255, 0.25); transform:rotate(45deg); animation:aniAurora2 ease-in-out 15s infinite; }
 		.aurora.n3 { top:80px; left:-30px; width:120px; height:100px; background:rgba(205, 41, 255, 0.25); transform:rotate(-45deg); animation:aniAurora3 ease-in-out 12s infinite; }
 		.aurora.n4 { top:130px; left:40px; width:70px; height:80px; background:rgba(41, 80, 255, 0.25); transform:rotate(35deg); animation:aniAurora2 ease-in-out 15s infinite; animation-delay:5s; }
 		@keyframes aniAuroras {
-			0% { top:0; left:0; }
-			20% { top:20%; left:80%; }
-			50% { top:80%; left:20%; }
+			0% { top:0; left:10%; }
+			20% { top:20%; left:60%; }
+			50% { top:60%; left:20%; }
 			70% { top:40%; left:0%; }
 			100% { top:0; left:0; }
 		}
